<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2a2a2a"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_666666">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/network_detail"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shareInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/share"
             />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/color_ffffff"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/color_ffffff" />

                <io.github.brijoe.ui.view.CopyText
                    android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:textColor="@color/color_ffffff" />

                <ImageView
                    android:id="@+id/code_img"
                    android:layout_width="5dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/white" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relative1"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/latency_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/request_latency"
                    android:textColor="@color/color_e8b25a"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/latency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/latency_title"
                    android:layout_toRightOf="@+id/latency_title"
                    android:text="@string/not_have"
                    android:textColor="@color/color_ffffff"
                    android:textSize="25sp" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/request_headers"
                android:textColor="@color/color_e8b25a"
                android:textSize="25sp" />

            <io.github.brijoe.ui.view.CopyText
                android:id="@+id/tv_request_headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/not_have"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/response_headers"
                android:textColor="@color/color_e8b25a"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <io.github.brijoe.ui.view.CopyText
                android:id="@+id/headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/not_have"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/post_data"
                android:textColor="@color/color_e8b25a"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <io.github.brijoe.ui.view.CopyText
                android:id="@+id/postData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/not_have"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/response_data"
                android:textColor="@color/color_e8b25a"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_ffffff" />


            <io.github.brijoe.ui.view.CopyText
                android:id="@+id/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_ffffff" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
